src/test/ui/typeck/autoderef-with-param-env-error.stderr
error[E0412]: cannot find type `T` in this scope
  --> $DIR/autoderef-with-param-env-error.rs:3:5
   |
LL | fn foo()
   |       - help: you might be missing a type parameter: `<T>`
LL | where
LL |     T: Send,
   |     ^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
