src/test/ui/typeck/autoderef-with-param-env-error.rs
fn foo()
where
    T: Send,
    //~^ cannot find type `T` in this scope
{
    let s = "abc".to_string();
}

fn main() {}
